--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ clap-verbosity-flag = "0.3.1"
 structopt = "0.3.21"
 thiserror = "1.0"
 combine = "4.5.2"
+cursive = { git = "https://github.com/gyscos/cursive" }
+cursive-aligned-view = "0.4.0"
