--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
   "version": "0.2.0",
   "configurations": [
+
     {
       "type": "lldb",
       "request": "launch",
@@ -12,7 +13,7 @@
           "kind": "bin"
         }
       },
-      "args": [],
+      "args": ["open"],
       "cwd": "${workspaceFolder}"
     },
     {
@@ -31,7 +32,7 @@
           "kind": "bin"
         }
       },
-      "args": [],
+      "args": ["open"],
       "cwd": "${workspaceFolder}"
     }
   ]
