--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ thiserror = "1.0"
 combine = "4.5.2"
 cursive = { git = "https://github.com/gyscos/cursive" }
 cursive-aligned-view = "0.4.0"
+num-traits = "0.2"
+num-derive = "0.3"
