:construction: add network fetching & path normalization of initial input

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ cursive-aligned-view = "0.4.0"
 num-traits = "0.2"
 num-derive = "0.3"
 url = "2.2.1"
+reqwest = { version = "0.11", features = ["blocking"] }
