--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ num-traits = "0.2"
 num-derive = "0.3"
 url = "2.2.1"
 reqwest = { version = "0.11", features = ["blocking"] }
+unicode-width = "0.1.8"
