--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ url = "2.2.1"
 reqwest = { version = "0.11", features = ["blocking"] }
 unicode-width = "0.1.8"
 rusty_v8 = "0.22.1"
+crossbeam-channel = "0.5.1"
